--- a/style.css
+++ b/style.css
@@ -16,7 +16,26 @@ body {
   background: var(--primary-background-color);
   min-height: 100vh;
   color: #fff;
+  font-family: "Poppins", sans-serif;
 }
+::-webkit-scrollbar {
+  width: 10px;
+}
+::-webkit-scrollbar-track {
+  border-radius: 15px;
+  background: #181717; /* color of the tracking area */
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: #b6b6b6;
+  transition: background-color 150ms ease-in-out;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #717171;
+}
+
 .continer {
   display: grid;
   gap: 10px;
@@ -132,7 +151,7 @@ body {
   display: flex;
   gap: 10px;
   align-items: center;
-  padding: 8px 16px;
+  padding: 8px 24px;
 }
 
 .continer .video_continer .video-controls-container .controls button {
@@ -145,7 +164,7 @@ body {
   color: inherit;
   padding: 0;
   font-size: 1.1rem;
-  opacity: 0.7;
+  opacity: 0.8;
   transition: opacity 150ms ease-in-out;
   position: relative;
 }
@@ -157,7 +176,8 @@ body {
   content: attr(data-label);
   position: absolute;
   top: -35px;
-  left: -10px;
+  left: 50%;
+  transform: translateX(-50%);
   width: max-content;
   height: max-content;
   background: #222121;
@@ -168,7 +188,7 @@ body {
   align-items: center;
   justify-content: center;
   font-size: 12px;
-  font-weight: 600;
+  font-weight: 700;
   color: #fff;
   transition: opacity 250ms ease-in-out;
 }
@@ -246,6 +266,7 @@ body {
   justify-content: center;
   position: relative;
 }
+
 input[type="range"] {
   -webkit-appearance: none;
   width: 100%;
@@ -275,20 +296,10 @@ input[type="range"]::-webkit-slider-thumb {
   cursor: pointer;
   z-index: 1;
 }
-/* input[type="range"] {
-  -webkit-appearance: none;
-  width: 100%;
-  height: 5px;
-  background: #ddd;
-  border-radius: 5px;
-  outline: none;
-  border: none;
-}
-
 
 input[type="range"]::-webkit-slider-runnable-progress {
   background: #181818;
-} */
+}
 svg {
   fill: var(--white);
   width: 100%;
@@ -298,6 +309,19 @@ svg {
   display: flex;
   align-items: center;
   flex-grow: 1;
+}
+.slash {
+  font-size: 9px;
+  margin: 0 5px;
+}
+.time {
+  font-size: 14px;
+}
+.time:first-child {
+  width: 35px;
+}
+.time:last-child {
+  width: 35px;
 }
 .volume-high-icon,
 .volume-muted-icon,
@@ -317,8 +341,32 @@ svg {
   width: 100%;
   height: 100%;
 }
+.play_list_header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background: #212121fa;
+  padding: 20px;
+}
+.play_list_header .title h4 {
+  font-size: 15px;
+  font-weight: 700;
+  line-height: 1.4;
+}
+.close {
+  width: 25px;
+  height: 25px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+.close svg {
+  width: 100%;
+  height: 100%;
+}
 .video_lists {
-  height: 270px;
+  height: 380px;
   overflow-y: scroll;
 }
 .video_lists .video_list {
@@ -366,15 +414,15 @@ svg {
   color: rgb(139, 139, 139);
 }
 .video_details h4 {
-  font-size: 14px;
-  font-weight: bold;
+  font-size: 12px;
+  font-weight: 700;
   line-height: 1;
   width: 100%;
 }
 
 .video_details p {
-  font-size: 14px;
-  line-height: 1.5;
+  font-size: 12px;
+  line-height: 1.6;
   color: rgb(139, 139, 139);
 }
 .video_list .video_tumnail {
