--- a/style.css
+++ b/style.css
@@ -107,16 +107,18 @@ body {
   width: 98%;
   margin: auto;
   background-color: rgba(215, 215, 215, 0.3);
-  border-radius: 5px;
-  cursor: pointer;
-}
 
+  cursor: pointer;
+  transition: height 250ms ease-in-out;
+}
+.continer .video_continer .video-controls-container .progress_bar:hover {
+  height: 6px;
+}
 .continer .video_continer .video-controls-container .progress_bar .progress {
   transition: transform 0.5s ease-in-out;
   background: red;
   width: 0%;
   height: 100%;
-  border-radius: 15px;
   position: relative;
 }
 
@@ -127,15 +129,14 @@ body {
   .progress::after {
   content: "";
   position: absolute;
-  width: 12px;
-  height: 12px;
+  width: 14px;
+  height: 14px;
   background: red;
   border-radius: 50%;
   top: -4px;
   right: -6px;
-  opacity: 0;
   transform: scale(0);
-  transition: all 0.3s ease-in-out;
+  transition: transform 250ms ease-in-out;
   transform-origin: center;
 }
 .continer
@@ -144,7 +145,6 @@ body {
   .progress_bar:hover
   .progress::after {
   transform: scale(1);
-  opacity: 1;
 }
 
 .continer .video_continer .video-controls-container .controls {
