--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
   font-family: "Poppins", sans-serif;
 }
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 8px;
 }
 ::-webkit-scrollbar-track {
   border-radius: 15px;
@@ -410,8 +410,8 @@ svg {
   width: 100%;
   height: 15px;
   text-align: center;
-  font-size: 14px;
-  font-weight: bold;
+  font-size: 12px;
+  font-weight: 400;
   color: rgb(139, 139, 139);
 }
 .video_details h4 {
